@@ -1,8 +1,9 @@
 * Wed Sep 16 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.6.1-0
 - Puppet changed the service provider to return service units whose
   state is static.  Because of this svckill was trying to kill system
-  processes.  This change updates the svckill provider to remove
-  static services from the kill list.
+  processes.  This change updates the svckill provider to only add
+  services the list of running services that are known to be in the
+  enabled or disabled state.
 
 * Thu Jan 09 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.6.0-0
 - Add EL8 support
